language/move-lang/tests/move_check/expansion/type_arguments_on_field_access.exp
error: 

   ┌── tests/move_check/expansion/type_arguments_on_field_access.move:6:9 ───
   │
 6 │         x.f<u64>;
   │         ^^^^^^^^ Unexpected type arguments. Thus, expected a function applied to its arguments
   │

